--- a/src/components/portfolio/practice.css
+++ b/src/components/portfolio/practice.css
@@ -91,8 +91,8 @@
   }
 
   .experience__container > div{
-      width: 100%;
-      padding: 2rem 1rem;
+      width: 80%;
+      padding: 1rem;
       
   }
 
