--- a/src/components/portfolio/practice.css
+++ b/src/components/portfolio/practice.css
@@ -1,59 +1,70 @@
-.experience__container{
+.experience__container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 2rem;
 }
 
-.techn{
+.techn {
   justify-content: center;
   align-items: center;
 }
 
-.experience__container > div{
+.experience__container > div {
   background: var(--color-bg-variant);
   padding: 2.4rem 4rem;
   /* border-radius: 2rem; */
   border: 1px solid transparent;
   transition: var(--transition);
 }
-.pic{
+
+.pic {
   padding: 20px;
 }
 
-.experience__container > div:hover{
+.experience__container > div:hover {
   background: transparent;
   border-color: var(--color-primary-variant);
   cursor: default;
 }
 
-.experience__container > div > h3{
+.experience__container > div > h3 {
   text-align: center;
   margin-bottom: 2rem;
   color: var(--color-primary);
 }
 
-.experience__content{
+.experience__content {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   row-gap: 2rem;
 }
 
-.experience__details{
+.experience__details {
   display: flex;
   gap: 1rem;
 }
 
-.experience__details-icon{
+.experience__details-icon {
   margin-top: 6px;
   color: var(--color-primary);
 }
 
-.experience__frontend{
+.experience__frontend {
   height: fit-content;
 }
 
-.experience__backend{
-  height: max-content;
+.experience__backend {
+  height: fit-content;
+}
+
+.otherskills {
+  display: flex;
+  position: absolute;
+  top: 1rem;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20%;
+  margin-right: 20%;
 }
 .otherskills{
   display: flex;
@@ -63,38 +74,49 @@
   align-items: center;
   margin-left: 20%;
   margin-right: 20%;
-  
 }
 
-/* =============== MEDIA QUERIES (MEDIUM DEVICES) ================ */
+.otherskills p {
+  font-size: 0.8rem; /* decrease font size */
+}
+
+/* MEDIA QUERIES */
+
+/* MEDIUM DEVICES */
 @media screen and (max-width: 1024px) {
-.experience__container{
-  grid-template-columns: 1fr;
+  .experience__container {
+    grid-template-columns: 1fr;
+  }
+
+  .experience__container > div {
+    width: 100%;
+    padding: 2rem;
+    margin: 0 auto;
+  }
+
+  .experience__content {
+    padding: 1rem;
+  }
 }
 
-.experience__container > div{
-  width: 80%;
-  padding: 2rem;
-  margin: 0 auto;
-}
-
-.experience__content{
-  padding: 1rem;
-}
-}
-
-
-/* =============== MEDIA QUERIES (SMALL DEVICES) ================ */
+/* SMALL DEVICES */
 @media screen and (max-width: 840px) {
-  .experience__container{
-      gap: 1rem;
+  .experience__container {
+    grid-template-columns: 1fr;
+    justify-content: center;
   }
 
-  .experience__container > div{
-      width: 80%;
-      padding: 1rem;
-      
+  .experience__container > div {
+    width: 100%;
+    padding: 1rem;
+    margin: 0 auto;
   }
 
+  .experience__frontend {
+    height: auto;
+  }
 
+  .experience__backend {
+    height: auto;
+  }
 }
